# ppe-detection-system

./: .gitignore  README.md  main.py  pyproject.toml
data/raw/construction_safety/: README.dataset.txt  README.roboflow.txt  data.yaml
data/raw/construction_safety/train/: labels.cache
data/raw/construction_safety/valid/: labels.cache
data/raw/ppe_v2_completo/: README.dataset.txt  README.roboflow.txt  data.yaml
data/raw/ppe_v2_completo/test/labels/: -01-15-1-1-1-1-1-mp40_jpg.rf.6ea2feb1f76bd6a527ae12998f659fbf.txt  -01-15-1-1-1-1-1-mp45_jpg.rf.8e65e39c3c9466e1771262cfb32de5d5.txt  -01-15-1-1-1-1-23_jpg.rf.9ef52bf989f5917263ceee8e7d5db9df.txt  -01-15-1-1-1-1-24_jpg.rf.f4bb36826f72c8d2859d6adb075802be.txt  -01-15-1-1-1-1-24_jpg.rf.f9092b16e86534d080f0a10a7a214227.txt  -01-15-1-1-1-3-10_jpg.rf.a6e39c374ed661e8ca006d4dda0f09fb.txt  -01-15-1-1-1-3-17_jpg.rf.845831a89dc35207afb433ad2c65af16.txt  -01-15-1-1-1-3-27_jpg.rf.9228dd4c3aebc577fe5778ef368521db.txt  -01-15-1-1-1-3-32_jpg.rf.3a6d095c30ca6b558ee244e83c564bb2.txt  -01-15-1-1-1-3-34_jpg.rf.01c2b8ebcd5aa349e17f461d696ccce2.txt  (+826 more)
data/raw/ppe_v2_completo/valid/: labels.cache
evidencias/: reporte_incidencias.csv
models/fase4_modelo_final_produccion/fase4_modelo_final_produccion/: args.yaml  results.csv
models/yolov8_epp_v1/: args.yaml  results.csv
models/yolov8_epp_v2/: args.yaml  results.csv
notebooks/: 01_entrenamiento_epp.ipynb  02_entrenamiento_epppv2.ipynb  03_entrenamiento_yuca.ipynb
src/: 01_model_test_V1.py  02_model_test.py  02_model_test_V2.py  03_custom_ui.py  04_dashboard.py  check_env.py
(+12648 files in other folders)
