[project]
name = "ppe-detection-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair<5",
    "ipykernel>=7.2.0",
    "lapx>=0.9.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "onnxruntime>=1.24.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "roboflow>=1.2.14",
    "seaborn>=0.13.2",
    "streamlit>=1.19.0",
    "ultralytics>=8.4.15",
]
